[project]
name = "payment-transaction-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "mysql>=0.0.3",
    "mysql-connector>=2.2.9",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
